# cs614-assignment-1

./: .gitignore  IMPLEMENTATION.md  README.md  pyproject.toml
configs/: hyperparams.py
notebooks/: main_notebook.ipynb  report.ipynb
src/: baselines.py  data_loader.py  evaluator.py  model_loader.py  topic_classifier.py  trainer.py  utils.py
