[project]
name = "medqa-finetune"
version = "0.1.0"
description = "Fine-tuning Mistral-7B on MedQA (USMLE) with QLoRA - CS614 Gen AI Assignment"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
    "trl>=0.28.0",
]
